fixing issues on mobile

--- a/src/landing/landing.module.scss
+++ b/src/landing/landing.module.scss
@@ -101,6 +101,11 @@
           background-size: cover;
         }
         .project-container {
+          .project-link {
+            display: block;
+            height: 100%;
+            width: 100%;
+          }
           @media (max-width: 540px) {
             flex: 0 0 32.3%;
           }
